# cnn_mlops

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  run_server.sh
.dvc/: config
.github/workflows/: run-linters.yml
cnn_mlops/: infer.py
cnn_mlops/data/: train.csv
cnn_mlops/model/: model.py
configs/: default.yaml
mlops/: config.py  enums.py  infer.py  train.py
mlops/data/: test.csv  test.csv.dvc  train.csv.dvc
mlops/model/: boosting_model.py  model.py
